@@ -2,11 +2,8 @@ package cloudflight.integra.backend.controller;
 
 import cloudflight.integra.backend.controller.problem.IncomeApiErrorResponses;
 import cloudflight.integra.backend.dto.IncomeDTO;
-import cloudflight.integra.backend.entity.Income;
-import cloudflight.integra.backend.mapper.IncomeMapper;
 import cloudflight.integra.backend.service.IncomeService;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -19,52 +16,49 @@ import org.springframework.web.bind.annotation.*;
 @IncomeApiErrorResponses
 public class IncomeController {
 
-  private static final Logger log = LoggerFactory.getLogger(IncomeController.class);
+    private static final Logger log = LoggerFactory.getLogger(IncomeController.class);
 
-  private final IncomeService incomeService;
+    private final IncomeService incomeService;
 
-  public IncomeController(IncomeService incomeService) {
-    this.incomeService = incomeService;
-  }
+    public IncomeController(IncomeService incomeService) {
+        this.incomeService = incomeService;
+    }
 
-  @PostMapping
-  public ResponseEntity<IncomeDTO> createIncome(@RequestBody IncomeDTO dto) {
-    log.info("Creating income: {}", dto);
-    Income income = IncomeMapper.toEntity(dto);
-    incomeService.createIncome(income);
-    return new ResponseEntity<>(IncomeMapper.toDTO(income), HttpStatus.CREATED);
-  }
+    @PostMapping
+    public ResponseEntity<IncomeDTO> createIncome(@RequestBody IncomeDTO dto) {
+        log.info("Creating income: {}", dto);
+        IncomeDTO saved = incomeService.createIncome(dto);
+        return new ResponseEntity<>(saved, HttpStatus.CREATED);
+    }
 
-  @GetMapping("/{id}")
-  public ResponseEntity<IncomeDTO> getIncomeById(@PathVariable Long id) {
-    log.debug("Fetching income with id {}", id);
-    Income income = incomeService.getIncomeById(id);
-    return new ResponseEntity<>(IncomeMapper.toDTO(income), HttpStatus.OK);
-  }
+    @GetMapping("/{id}")
+    public ResponseEntity<IncomeDTO> getIncomeById(@PathVariable Long id) {
+        log.debug("Fetching income with id {}", id);
+        IncomeDTO income = incomeService.getIncomeById(id);
+        return new ResponseEntity<>(income, HttpStatus.OK);
+    }
 
-  @GetMapping
-  public ResponseEntity<List<IncomeDTO>> getAllIncomes() {
-    log.debug("Fetching all incomes");
-    List<IncomeDTO> dtos =
-        StreamSupport.stream(incomeService.getAllIncomes().spliterator(), false)
-            .map(IncomeMapper::toDTO)
-            .collect(Collectors.toList());
-    return new ResponseEntity<>(dtos, HttpStatus.OK);
-  }
+    @GetMapping
+    public ResponseEntity<List<IncomeDTO>> getAllIncomes() {
+        log.debug("Fetching all incomes");
+        List<IncomeDTO> incomes = StreamSupport.stream(
+                        incomeService.getAllIncomes().spliterator(), false)
+                .toList();
+        return new ResponseEntity<>(incomes, HttpStatus.OK);
+    }
 
-  @PutMapping("/{id}")
-  public ResponseEntity<IncomeDTO> updateIncome(@PathVariable Long id, @RequestBody IncomeDTO dto) {
-    log.info("Updating income with id {}", id);
-    Income income = IncomeMapper.toEntity(dto);
-    income.setId(id);
-    incomeService.updateIncome(income);
-    return new ResponseEntity<>(IncomeMapper.toDTO(income), HttpStatus.OK);
-  }
+    @PutMapping("/{id}")
+    public ResponseEntity<IncomeDTO> updateIncome(@PathVariable Long id, @RequestBody IncomeDTO dto) {
+        log.info("Updating income with id {}", id);
+        dto.setId(id);
+        IncomeDTO income = incomeService.updateIncome(dto);
+        return new ResponseEntity<>(income, HttpStatus.OK);
+    }
 
-  @DeleteMapping("/{id}")
-  public ResponseEntity<Void> deleteIncome(@PathVariable Long id) {
-    log.warn("Deleting income with id {}", id);
-    incomeService.deleteIncome(id);
-    return new ResponseEntity<>(HttpStatus.NO_CONTENT);
-  }
+    @DeleteMapping("/{id}")
+    public ResponseEntity<Void> deleteIncome(@PathVariable Long id) {
+        log.warn("Deleting income with id {}", id);
+        incomeService.deleteIncome(id);
+        return new ResponseEntity<>(HttpStatus.NO_CONTENT);
+    }
 }
